Change to default values

--- a/rentorbuy.html
+++ b/rentorbuy.html
@@ -48,14 +48,14 @@
 					<label for="purchase-price">Purchase price: </label>
 					<div class="input-group">
 						<span class="input-group-addon">$</span>
-						<input type="number" min="0" step="any" class="form-control" id="purchase-price" value="500000" required>
+						<input type="number" min="0" step="any" class="form-control" id="purchase-price"required>
 					</div>
 				</div>
 				<div class="form-group col-xs-12 col-sm-6">
 					<label for="down-payment">Down Payment: </label>
 					<div class="input-group">
 						<span class="input-group-addon">$</span>
-						<input type="number" min="0" step="any" class="form-control" id="down-payment" value="100000" required>
+						<input type="number" min="0" step="any" class="form-control" id="down-payment"required>
 					</div>
 				</div>
 				<div class="form-group col-xs-12 col-sm-6">
@@ -85,20 +85,20 @@
 					<a href="#" class="tooltip-large" data-toggle="tooltip" title="If you purchase a condominium, townhouse, or other type of property in a planned development, you are generally obligated to pay monthly homeowners association fees for the upkeep of common areas.">(?)</a>
 					<div class="input-group">
 						<span class="input-group-addon">$</span>
-						<input type="number" min="0" step="any" class="form-control" id="monthly-hoa" value="250" required>
+						<input type="number" min="0" step="any" class="form-control" id="monthly-hoa" required>
 					</div>
 				</div>
 				<div class="form-group col-xs-12 col-sm-6">
 					<label for="annual-insurance">Annual Homeowners Insurance: </label>
 					<div class="input-group">
 						<span class="input-group-addon">$</span>
-						<input type="number" min="0" step="any" class="form-control" id="annual-insurance" value="230" required>
+						<input type="number" min="0" step="any" class="form-control" id="annual-insurance"required>
 					</div>
 				</div>
 				<div class="form-group col-xs-12 col-sm-6">
 					<label for="appreciation-rate">Estimated Annual Appreciation Rate: </label>
 					<div class="input-group">
-						<input type="number" min="0" step="any" class="form-control" id="appreciation-rate" value="2" required>
+						<input type="number" min="0" step="any" class="form-control" id="appreciation-rate" value="1" required>
 						<span class="input-group-addon">%</span>
 					</div>
 				</div>
@@ -106,7 +106,7 @@
 					<label for="annual-maintenance">Annual Maintenance (not covered by HOA): </label>
 					<div class="input-group">
 						<span class="input-group-addon">$</span>
-						<input type="number" min="0" step="any" class="form-control" id="annual-maintenance" value="300" required>
+						<input type="number" min="0" step="any" class="form-control" id="annual-maintenance"required>
 					</div>
 				</div>
 				<div class="form-group col-xs-12 col-sm-6">
@@ -120,7 +120,7 @@
 					<label for="tax-rate">Marginal Tax Rate: </label>
 					<a href="#" class="tooltip-large" data-toggle="tooltip" title="If you purchase your home, the property taxes and interest paid on your mortgage are tax deductible. In order to accurately calculate savings from tax deductions, enter the cumulative marginal federal and state tax rate on your annual household income.">(?)</a>
 					<div class="input-group">
-						<input type="number" min="0" step="any" class="form-control" id="tax-rate" value="28" required>
+						<input type="number" min="0" step="any" class="form-control" id="tax-rate" value="30" required>
 						<span class="input-group-addon">%</span>
 					</div>
 				</div>
@@ -128,7 +128,7 @@
 					<label for="rent">Monthly Rent (for similar home): </label>
 					<div class="input-group">
 						<span class="input-group-addon">$</span>
-						<input type="number" min="0" step="any" class="form-control" id="rent" value="1700"required>
+						<input type="number" min="0" step="any" class="form-control" id="rent" required>
 					</div>
 				</div>
 				<div class="form-group col-xs-12 col-sm-6">
