Added tooltip for savings when renting

--- a/rentorbuy.html
+++ b/rentorbuy.html
@@ -27,7 +27,9 @@
 						<thead>
 							<tr>
 								<th>Month</th>
-								<th>Savings when renting</th>
+								<th>Savings when renting
+									<a href="#" class="tooltip-large" data-toggle="tooltip" title="Down payment plus savings from forgone home ownership expenses invested while renting.">(?)</a>
+								</th>
 								<th>Equity in home</th>
 								<th>Cash after selling home
 									<a href="#" class="tooltip-large" data-toggle="tooltip" title="Assuming a rate of 6% to cover realtor fees and closing costs, this is the cash you would receive after selling your home.">(?)</a>
