--- a/rentorbuy.html
+++ b/rentorbuy.html
@@ -152,6 +152,9 @@
 				<div class="col-xs-1">
 					<input class="btn btn-default" type="submit" value="Compare">
 				</div>
+				<div class="col-xs-12">
+					<br />
+				</div>
 			</form>
 			</div>
 
