--- a/rentorbuy.html
+++ b/rentorbuy.html
@@ -57,8 +57,9 @@
 					<label for="down-payment">Down Payment: </label>
 					<div class="input-group">
 						<span class="input-group-addon">$</span>
-						<input type="number" min="0" step="any" class="form-control" id="down-payment"required>
+						<input type="number" min="0" step="any" class="form-control" id="down-payment" data-lessthanpurchaseprice="lessthanpurchaseprice" required>
 					</div>
+					<div class="help-block with-errors"></div>
 				</div>
 				<div class="form-group col-xs-12 col-sm-6">
 					<label for="mortgage-rate">Mortgage Interest Rate: </label>
@@ -320,6 +321,20 @@
 			Number.prototype.toFinancial = function() {
 				return "$" + Math.round(this).toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
 			};
+
+			$('#input-form').validator({
+				custom: {
+					lessthanpurchaseprice: function($el) {
+						console.log("lessThanPurchasePrice called")
+						console.log($el.val() + " should be less than")
+						console.log($('#purchase-price').val());
+						return $el.val() < $('#purchase-price').val();
+					}
+				},
+				errors: {
+					lessthanpurchaseprice: 'Down payment must be less than purchase price.'
+				}
+			});
 
     		$('#input-form').validator().on('submit', function (event) {
     			if (!event.isDefaultPrevented()) {
