--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 		<!-- Optional theme -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+		<!-- Google Analytics -->
+		<script>
+  			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  			ga('create', 'UA-77118387-1', 'auto');
+  			ga('send', 'pageview');
+		</script>
 	</head>
 
 	<body>
@@ -337,11 +347,26 @@
 			});
 
     		$('#input-form').validator().on('submit', function (event) {
-    			if (!event.isDefaultPrevented()) {
+    			if (event.isDefaultPrevented()) {
+    				ga('send', {
+    					hitType: 'event',
+    					eventCategory: 'button',
+    					eventAction: 'click',
+    					eventLabel: 'compare',
+    					eventValue: 0
+    				});
+    			} else {
     				$('#results-section').show();
     				calculate();
     				window.scrollTo(0, 0);
     				event.preventDefault();
+    				ga('send', {
+    					hitType: 'event',
+    					eventCategory: 'button',
+    					eventAction: 'click',
+    					eventLabel: 'compare',
+    					eventValue: 1
+    				});
     			}
     		});
 
