--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 	<head>
+		<meta name='viewport' content='width=device-width, initial-scale=1.0, user-scalable=0' >
 		<title>Should I rent or buy?</title>
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -335,10 +336,7 @@
 			$('#input-form').validator({
 				custom: {
 					lessthanpurchaseprice: function($el) {
-						console.log("lessThanPurchasePrice called")
-						console.log($el.val() + " should be less than")
-						console.log($('#purchase-price').val());
-						return $el.val() < $('#purchase-price').val();
+						return Number($el.val()) < Number($('#purchase-price').val());
 					}
 				},
 				errors: {
